--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM-интегратор | Портфолио</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/slick-theme.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/portfolio/css/slick.css">
+    <link rel="stylesheet" href="/portfolio/css/slick-theme.css">
+    <link rel="stylesheet" href="/portfolio/css/style.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
                                 работают.</p>
                         </div>
                         <div class="about-image">
-                            <img src="images/photo.jpg" alt="CRM-интегратор">
+                            <img src="/portfolio/images/photo.jpg" alt="CRM-интегратор">
                         </div>
                     </div>
                 </div>
@@ -318,8 +318,8 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/portfolio/js/slick.min.js"></script>
+    <script src="/portfolio/js/script.js"></script>
 </body>
 
 </html>
