Сменил соцсети и количество проектов

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="achievements-grid">
                         <div class="achievement-item">
                             <!--<i class="fas fa-project-diagram"></i>-->
-                            <div class="counter"><span>150</span>+</div>
+                            <div class="counter"><span>20</span>+</div>
                             <p>Завершенных проектов</p>
                         </div>
                         <div class="achievement-item">
@@ -199,11 +199,9 @@
             <footer>
                 <div class="container">
                     <div class="social-links">
-                        <a href="#" class="social-item"><i class="fab fa-telegram"></i></a>
-                        <a href="#" class="social-item"><i class="fab fa-whatsapp"></i></a>
-                        <a href="#" class="social-item"><i class="fab fa-vk"></i></a>
-                        <a href="#" class="social-item"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-item"><i class="fab fa-linkedin"></i></a>
+                        <a href=" t.me/@pavlai" class="social-item"><i class="fab fa-telegram"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=89519462160" class="social-item"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://vk.com/pashashilov17" class="social-item"><i class="fab fa-vk"></i></a>
                     </div>
                 </div>
             </footer>
