Обновил тг и ватсап

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             <footer>
                 <div class="container">
                     <div class="social-links">
-                        <a href=" t.me/@pavlai" class="social-item"><i class="fab fa-telegram"></i></a>
-                        <a href="https://api.whatsapp.com/send/?phone=89519462160" class="social-item"><i class="fab fa-whatsapp"></i></a>
+                        <a href=" t.me/pavlai" class="social-item"><i class="fab fa-telegram"></i></a>
+                        <a href="https://api.whatsapp.com/send/?phone=79519462160" class="social-item"><i class="fab fa-whatsapp"></i></a>
                         <a href="https://vk.com/pashashilov17" class="social-item"><i class="fab fa-vk"></i></a>
                     </div>
                 </div>
