--- a/index.html
+++ b/index.html
@@ -119,13 +119,12 @@
                             </div>
                             <div class="case-content">
                                 <div class="case-title">
-                                    <h3>Интернет-магазин электроники</h3>
+                                    <h3>Школа танцев</h3>
                                     <div class="case-arrow">
                                         <i class="fas fa-arrow-right"></i>
                                     </div>
                                 </div>
-                                <p>Настройка CRM для автоматизации заказов, интеграция с 1С и сайтом. Увеличение
-                                    конверсии на 27%.</p>
+                                <p>Цикличная воронка продаж с интеграцией платежей в Bitrix24 и настройкой множества автоматических действий — от рассылок до управления сделками.</p>
                             </div>
                         </div>
                         <div class="case-card" data-modal="modal-2">
@@ -135,13 +134,12 @@
                             </div>
                             <div class="case-content">
                                 <div class="case-title">
-                                    <h3>Туристическое агентство</h3>
+                                    <h3>Кдининговая компания</h3>
                                     <div class="case-arrow">
                                         <i class="fas fa-arrow-right"></i>
                                     </div>
                                 </div>
-                                <p>Внедрение CRM с интеграцией сервисов бронирования. Сокращение времени обработки
-                                    заявок на 40%.</p>
+                                <p>Внедрение CRM с интеграцией сервисов бронирования и каналов связи. Поддержание CRM в роли администратора</p>
                             </div>
                         </div>
                         <div class="case-card" data-modal="modal-3">
@@ -151,13 +149,12 @@
                             </div>
                             <div class="case-content">
                                 <div class="case-title">
-                                    <h3>Интернет-магазин электроники</h3>
+                                    <h3>Завод по производству домокомплектов</h3>
                                     <div class="case-arrow">
                                         <i class="fas fa-arrow-right"></i>
                                     </div>
                                 </div>
-                                <p>Автоматизация отдела продаж и внедрение сквозной аналитики. Рост продаж на 34% за
-                                    полгода.</p>
+                                <p>Создание связи между отделом продаж и производством с внедрением аналитики </p>
                             </div>
                         </div>
                     </div>
