--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="cases-grid">
                         <div class="case-card" data-modal="modal-1">
                             <div class="case-image">
-                                <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                <img src="portfolio/images/ballet-dancers-couple-isolated-icon_24911-54351/jpg"
                                     alt="Интернет-магазин">
                             </div>
                             <div class="case-content">
@@ -129,12 +129,12 @@
                         </div>
                         <div class="case-card" data-modal="modal-2">
                             <div class="case-image">
-                                <img src="https://images.unsplash.com/photo-1563013544-824ae1b704d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                <img src="portfolio/images/e00b838f505eb515b48ca50e99e52231/png"
                                     alt="Туристическая компания">
                             </div>
                             <div class="case-content">
                                 <div class="case-title">
-                                    <h3>Кдининговая компания</h3>
+                                    <h3>Клининговая компания</h3>
                                     <div class="case-arrow">
                                         <i class="fas fa-arrow-right"></i>
                                     </div>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="https://images.unsplash.com/photo-1497366811353-6870744d04b2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
+                                <img src="portfolio/images/vector-worker-on-car-factory/jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
@@ -154,7 +154,37 @@
                                         <i class="fas fa-arrow-right"></i>
                                     </div>
                                 </div>
-                                <p>Создание связи между отделом продаж и производством с внедрением аналитики </p>
+                                <p>Создание связи между отделом продаж и производством с внедрением аналитики, подключение телефонии </p>
+                            </div>
+                            <div class="case-card" data-modal="modal-3">
+                            <div class="case-image">
+                                <img src="portfolio/images/99042994-b9f8-4ae6-bc61-d87c11ce7b8f-1/jpg"
+                                    alt="Производство">
+                            </div>
+                            <div class="case-content">
+                                <div class="case-title">
+                                    <h3>Медицинская компания</h3>
+                                    <div class="case-arrow">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                                <p>Внедрение CRM с шаблонами документов, интеграция с почтой и полуавтоматическая воронка продаж</p>
+                            </div>
+                            <div class="case-card" data-modal="modal-3">
+                            <div class="case-image">
+                                <img src="portfolio/images/d4f77d117072273.606eb9933e957/jpg"
+                                    alt="Производство">
+                            </div>
+                            <div class="case-content">
+                                <div class="case-title">
+                                    <h3>Страховая компания в Испании</h3>
+                                    <div class="case-arrow">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                                <p>Перенос большой клиентской базы, добавление автоматизации</p>
+                            </div>
+                            <div class="case-card" data-modal="modal-3">
                             </div>
                         </div>
                     </div>
