--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="cases-grid">
                         <div class="case-card" data-modal="modal-1">
                             <div class="case-image">
-                                <img src="portfolio/images/ballet-dancers-couple-isolated-icon_24911-54351/jpg"
+                                <img src="portfolio/images/dance.jpg"
                                     alt="Интернет-магазин">
                             </div>
                             <div class="case-content">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-2">
                             <div class="case-image">
-                                <img src="portfolio/images/e00b838f505eb515b48ca50e99e52231/png"
+                                <img src="portfolio/images/clean.png"
                                     alt="Туристическая компания">
                             </div>
                             <div class="case-content">
@@ -144,7 +144,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="portfolio/images/vector-worker-on-car-factory/jpg"
+                                <img src="portfolio/images/dom.jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
@@ -159,7 +159,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="portfolio/images/99042994-b9f8-4ae6-bc61-d87c11ce7b8f-1/jpg"
+                                <img src="portfolio/images/med.jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
@@ -174,7 +174,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="portfolio/images/d4f77d117072273.606eb9933e957/jpg"
+                                <img src="portfolio/images/strach.jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
