--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="cases-grid">
                         <div class="case-card" data-modal="modal-1">
                             <div class="case-image">
-                                <img src="portfolio/images/dance.jpg"
+                                <img src="/portfolio/images/dance.jpg"
                                     alt="Интернет-магазин">
                             </div>
                             <div class="case-content">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-2">
                             <div class="case-image">
-                                <img src="portfolio/images/clean.png"
+                                <img src="/portfolio/images/clean.png"
                                     alt="Туристическая компания">
                             </div>
                             <div class="case-content">
@@ -144,7 +144,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="portfolio/images/dom.jpg"
+                                <img src="/portfolio/images/dom.jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
@@ -159,7 +159,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="portfolio/images/med.jpg"
+                                <img src="/portfolio/images/med.jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
@@ -174,7 +174,7 @@
                         </div>
                         <div class="case-card" data-modal="modal-3">
                             <div class="case-image">
-                                <img src="portfolio/images/strach.jpg"
+                                <img src="/portfolio/images/strach.jpg"
                                     alt="Производство">
                             </div>
                             <div class="case-content">
