--- a/index.html
+++ b/index.html
@@ -111,6 +111,112 @@
                 </div>
             </section>
 
+            <!--Services Section-->
+
+            <section class="services" id="services">
+                <div class="container">
+                    <div class="section-title">
+                        <h2>Сервисы, с которыми я работаю</h2>
+                    </div>
+                    <div class="services-grid">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo">AMO<br>CRM</div>
+                            </div>
+                            <div class="service-name">AmoCRM</div>
+                            <div class="service-description">CRM система</div>
+                        </div>
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo">1С</div>
+                            </div>
+                            <div class="service-name">1С</div>
+                            <div class="service-description">Учетная система</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div class="service-name">Mango</div>
+                            <div class="service-description">Телефония</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo small">МЕГА<br>ФОН</div>
+                            </div>
+                            <div class="service-name">МегаФон</div>
+                            <div class="service-description">Мобильная связь</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo">TILDA</div>
+                            </div>
+                            <div class="service-name">Тильда</div>
+                            <div class="service-description">Конструктор сайтов</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo">VK</div>
+                            </div>
+                            <div class="service-name">ВКонтакте</div>
+                            <div class="service-description">Соцсеть</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <i class="fab fa-instagram"></i>
+                            </div>
+                            <div class="service-name">Instagram</div>
+                            <div class="service-description">Соцсеть</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo small">АВИТО</div>
+                            </div>
+                            <div class="service-name">Авито</div>
+                            <div class="service-description">Доска объявлений</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <i class="fas fa-file-excel"></i>
+                            </div>
+                            <div class="service-name">Excel</div>
+                            <div class="service-description">Таблицы</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <i class="fab fa-whatsapp"></i>
+                            </div>
+                            <div class="service-name">Wazzup</div>
+                            <div class="service-description">Мессенджер</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo small"></div>
+                            </div>
+                            <div class="service-name">Т-банк</div>
+                            <div class="service-description">Банк</div>
+                        </div>
+
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <div class="text-logo small"></div>
+                            </div>
+                            <div class="service-name">Яндекс метрика</div>
+                            <div class="service-description">Анализ поведения пользователей</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Cases Section -->
             <section id="cases">
                 <div class="container">
