--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <div class="dot active" data-section="hero"></div>
                 <div class="dot" data-section="about"></div>
                 <div class="dot" data-section="skills"></div>
+                <div class="dot" data-section="services"></div>
                 <div class="dot" data-section="cases"></div>
                 <div class="dot" data-section="achievements"></div>
             </div>
@@ -98,13 +99,8 @@
                                 бизнес-процессов</p>
                         </div>
                         <div class="skill-card">
-                            <i class="fas fa-database"></i>
-                            <h3>Миграция из других CRM</h3>
-                            <p>Переезд с других CRM-систем с сохранением, очисткой и адаптацией данных</p>
-                        </div>
-                        <div class="skill-card">
                             <i class="fas fa-chart-line"></i>
-                            <h3>Аналитика и отчеты</h3>
+                            <h3>Аналитика и работа с данными</h3>
                             <p>Создание дашбордов и отчетов для анализа эффективности</p>
                         </div>
                     </div>
@@ -123,95 +119,71 @@
                             <div class="service-icon">
                                 <div class="text-logo">AMO<br>CRM</div>
                             </div>
-                            <div class="service-name">AmoCRM</div>
-                            <div class="service-description">CRM система</div>
                         </div>
                         <div class="service-card">
                             <div class="service-icon">
                                 <div class="text-logo">1С</div>
                             </div>
-                            <div class="service-name">1С</div>
-                            <div class="service-description">Учетная система</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <i class="fas fa-phone"></i>
                             </div>
-                            <div class="service-name">Mango</div>
-                            <div class="service-description">Телефония</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <div class="text-logo small">МЕГА<br>ФОН</div>
                             </div>
-                            <div class="service-name">МегаФон</div>
-                            <div class="service-description">Мобильная связь</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <div class="text-logo">TILDA</div>
                             </div>
-                            <div class="service-name">Тильда</div>
-                            <div class="service-description">Конструктор сайтов</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <div class="text-logo">VK</div>
                             </div>
-                            <div class="service-name">ВКонтакте</div>
-                            <div class="service-description">Соцсеть</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <i class="fab fa-instagram"></i>
                             </div>
-                            <div class="service-name">Instagram</div>
-                            <div class="service-description">Соцсеть</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <div class="text-logo small">АВИТО</div>
                             </div>
-                            <div class="service-name">Авито</div>
-                            <div class="service-description">Доска объявлений</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <i class="fas fa-file-excel"></i>
                             </div>
-                            <div class="service-name">Excel</div>
-                            <div class="service-description">Таблицы</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
                                 <i class="fab fa-whatsapp"></i>
                             </div>
-                            <div class="service-name">Wazzup</div>
-                            <div class="service-description">Мессенджер</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
-                                <div class="text-logo small"></div>
+                                <div class="text-logo small">Т-банк</div>
                             </div>
-                            <div class="service-name">Т-банк</div>
-                            <div class="service-description">Банк</div>
                         </div>
 
                         <div class="service-card">
                             <div class="service-icon">
-                                <div class="text-logo small"></div>
+                                <div class="text-logo small">Яндекс</div>
                             </div>
-                            <div class="service-name">Яндекс метрика</div>
-                            <div class="service-description">Анализ поведения пользователей</div>
                         </div>
                     </div>
                 </div>
