--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="modal-section">
                     <h3 class="modal-section-title"><i class="fas fa-tasks"></i> Задача</h3>
                     <ul class="modal-list">
-                        <li>Автоматизировать процесс обработки заказов так что бы вывести их в цикл</li>
+                        <li>Автоматизировать процесс обработки заказов так, что бы вывести их в цикл</li>
                         <li>Интегрировать CRM с сайтом для синхронизации данных</li>
                         <li>Подключить каналы связи и настроить под них автоматические действия</li>
                         <li>Интеграция в Битрикс24 платёжной системы заказчика</li>
@@ -340,11 +340,11 @@
                     <h3 class="modal-section-title"><i class="fas fa-check-circle"></i> Что было сделано</h3>
                     <ul class="modal-list">
                         <li>Внедрена CRM Битрикс24 с полной настройкой под необходимые процессы</li>
-                        <li>Настроена интеграция с сайтом на Тильде через REST API</li>
+                        <li>Настроена интеграция с сайтом на Tilda через REST API</li>
                         <li>Настроены бизнес-процессы автоматической обработки заказов и уведомлений</li>
                         <li>Созданы дашборды для анализа эффективности маркетинговых каналов</li>
-                        <li>Подключена платёжная система и действующие каналы свзяи</li>
-                        <li>Создана база данных для новых и дейтсвующих сотрудников</li>
+                        <li>Подключена платёжная система и действующие каналы связи</li>
+                        <li>Создана база данных для новых и действующих сотрудников</li>
                     </ul>
                 </div>
             </div>
@@ -381,7 +381,7 @@
                         <li>Настроена интеграция с системой лояльности выбранной клиентом</li>
                         <li>Реализованы автоматические уведомления для клиентов и сотрудников на всех этапах
                             бронирования</li>
-                        <li>Создана база знаний для новых и дейтсвующих сотрудников</li>
+                        <li>Создана база знаний для новых и действующих сотрудников</li>
                         <li>Настроены воронки продаж и автоматические задачи для менеджеров</li>
                         <li>Внедрена телефония и запись разговоров для контроля качества и другие каналы связи</li>
                         <li>Создание аналитических отчётов</li>
@@ -418,7 +418,7 @@
                     <ul class="modal-list">
                         <li>Разработана и внедрена CRM-система на основе Битрикс24</li>
                         <li>Настроена интеграция с открытыми линиями</li>
-                        <li>Реализованы автоматические уведомления для сотрудников на тех этапах где это необходимо</li>
+                        <li>Реализованы автоматические уведомления для сотрудников на тех этапах, где это необходимо</li>
                         <li>Создана база знаний для новых и уже действующих сотрудников</li>
                         <li>Настроены воронки продаж, производства и автоматические задачи для менеджеров</li>
                         <li>Внедрена телефония и запись разговоров для контроля качества</li>
@@ -455,7 +455,7 @@
                     <ul class="modal-list">
                         <li>Разработана и внедрена CRM-система на основе Битрикс24</li>
                         <li>Настроена интеграция с почтой</li>
-                        <li>Реализованы автоматические уведомления для сотрудников на тех этапах где это необходимо</li>
+                        <li>Реализованы автоматические уведомления для сотрудников на тех этапах, где это необходимо</li>
                         <li>Создана база знаний для новых и уже действующих сотрудников</li>
                         <li>Настроена полуавтоматическая воронка понятная для любого</li>
                         <li>Созданы шаблоны документов</li>
@@ -479,18 +479,19 @@
                 <div class="modal-section">
                     <h3 class="modal-section-title"><i class="fas fa-tasks"></i> Задача</h3>
                     <ul class="modal-list">
-                        <li>Подготовить текущую базу к импорту, создать нове поля в Битрикс24</li>
+                        <li>Подготовить текущую базу к импорту, создать новые поля в Битрикс24</li>
                         <li>Изучить действующую автоматицию и подготовить список рекомендаций</li>
                         <li>Изменить действующую автоматизацию</li>
                     </ul>
                 </div>
-                <li>Разработана и внедрена CRM-система на основе Битрикс24</li>
-                <li>Подгатовлена и перенесена клиентская база и база товаров</li>
-                <li>Проанализирована действующая автоматика и подготовлены рекомендации </li>
-                <li>Создана база знаний для новых и уже действующих сотрудников</li>
+                
                 <div class="modal-section">
                     <h3 class="modal-section-title"><i class="fas fa-check-circle"></i> Что было сделано</h3>
                     <ul class="modal-list">
+                        <li>Разработана и внедрена CRM-система на основе Битрикс24</li>
+                        <li>Подготовлена и перенесена клиентская база и база товаров</li>
+                        <li>Проанализирована действующая автоматика и подготовлены рекомендации </li>
+                        <li>Создана база знаний для новых и уже действующих сотрудников</li>
 
                     </ul>
                 </div>
